ci: make pkg explicitly public

--- a/sdk/package.json
+++ b/sdk/package.json
@@ -6,6 +6,9 @@
     "type": "git",
     "url": "https://github.com/otaprotocol/prefix-system"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
